src/objects/ADvendio__RTBAdSpec__c.object
<CustomObject>
    <description>PA web service writes data to this object.</description>
    <fields>
        <fullName>ADvendio__AdServerLogin__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AdServer Login (deprecated)</label>
        <referenceTo>ADvendio__AdServer_Logins__c</referenceTo>
        <relationshipLabel>PA Ad Specs (deprecated)</relationshipLabel>
        <relationshipName>RTBAdSpecs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSlotEditable__c</fullName>
        <description>If the Ad Slot can be edited</description>
        <inlineHelpText>If the Ad Slot can be edited</inlineHelpText>
        <label>Ad Slot Editable (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSlotId__c</fullName>
        <description>PA web service writes Ad Slot ID to this field.</description>
        <inlineHelpText>RTB web service writes Ad Slot ID to this field.</inlineHelpText>
        <label>Ad Slot ID (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSlotName__c</fullName>
        <description>Ad Slot Name</description>
        <inlineHelpText>Ad Slot Name</inlineHelpText>
        <label>Ad Slot Name (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSlotOptimized__c</fullName>
        <description>If the Ad Slot contains a YieldProbe optimization</description>
        <inlineHelpText>If the Ad Slot contains a YieldProbe optimization</inlineHelpText>
        <label>Ad Slot Optimized (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSlotType__c</fullName>
        <description>Ad Slot Type: 0 (web), 1 (mobile web) and 2 (mobile app).</description>
        <inlineHelpText>Ad Slot Type: 0 (web), 1 (mobile web) and 2 (mobile app).</inlineHelpText>
        <label>Ad Slot Type (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to AdSpec to match RTBAdSpec with AdSpecs.</description>
        <inlineHelpText>Lookup to AdSpec to match RTBAdSpec with AdSpecs.</inlineHelpText>
        <label>Ad Spec (deprecated)</label>
        <referenceTo>ADvendio__Ad_Specs__c</referenceTo>
        <relationshipLabel>PA Ad Specs (deprecated)</relationshipLabel>
        <relationshipName>RTBAdSpecs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Categories__c</fullName>
        <description>Array of categories this Ad Slot belongs to.</description>
        <inlineHelpText>Array of categories this Ad Slot belongs to.</inlineHelpText>
        <label>Categories (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Format__c</fullName>
        <description>Format of “width x height” for this Ad Slot.</description>
        <inlineHelpText>Format of “width x height” for this Ad Slot.</inlineHelpText>
        <label>Format (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ReferrerOverrided__c</fullName>
        <description>If the Adslot referrer can be overrided.</description>
        <inlineHelpText>If the Adslot referrer can be overrided.</inlineHelpText>
        <label>Referrer Overrided (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ReferrerURL__c</fullName>
        <description>Referrer URL for this Ad Slot.</description>
        <inlineHelpText>Referrer URL for this Ad Slot.</inlineHelpText>
        <label>Referrer URL (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey2__c</fullName>
        <description>Unique Key. Will be generated automatically.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Key. Will be generated automatically.</inlineHelpText>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>Unique Key. Will be generated automatically.</description>
        <inlineHelpText>Unique Key. Will be generated automatically.</inlineHelpText>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PA Ad Spec (deprecated)</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ADvendio__AdServerLogin__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PA AdSpec Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PA Ad Specs (deprecated)</pluralLabel>
    <recordTypes>
        <fullName>ADvendio__ADEX</fullName>
        <active>true</active>
        <description>This record type should be used to store data for Ad server DoubleClick Ad Exchange</description>
        <label>ADEX</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__YIELDLAB</fullName>
        <active>true</active>
        <description>This record type should be used to store data for Ad server YIELDLAB</description>
        <label>YIELDLAB</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>